[gd_scene load_steps=5 format=3 uid="uid://custom_unit_card"]

[ext_resource type="Script" path="res://battle_scene/unit_card.gd" id="1_script"]

[sub_resource type="Shader" id="Shader_oval"]
code = "shader_type canvas_item;

void fragment() {
	vec2 uv = UV - vec2(0.5);
	// Standard circle in UV-space becomes an oval in non-square aspect ratios
	float dist = uv.x * uv.x * 4.0 + uv.y * uv.y * 4.0;
	if (dist > 1.0) {
		discard;
	}
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_art"]
shader = SubResource("Shader_oval")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_border"]
bg_color = Color(0.18, 0.15, 0.12, 0)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.4, 0.35, 0.25, 1)
corner_radius_top_left = 80
corner_radius_top_right = 80
corner_radius_bottom_right = 80
corner_radius_bottom_left = 80

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mask"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 80
corner_radius_top_right = 80
corner_radius_bottom_right = 80
corner_radius_bottom_left = 80

[node name="UnitCard" type="Control"]
custom_minimum_size = Vector2(160, 220)
layout_mode = 3
anchors_preset = 0
offset_right = 160.0
offset_bottom = 220.0
script = ExtResource("1_script")
card_size = Vector2(160, 220)

[node name="FrontFace" type="Control" parent="."]
layout_mode = 0
offset_right = 160.0
offset_bottom = 220.0
mouse_filter = 1

[node name="TextureRect" type="TextureRect" parent="FrontFace"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 1.0
offset_bottom = 1.0

[node name="CardBackground" type="ColorRect" parent="FrontFace"]
layout_mode = 0
offset_right = 160.0
offset_bottom = 220.0
color = Color(0.25, 0.2, 0.15, 1)

[node name="CardBorder" type="ColorRect" parent="FrontFace"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 158.0
offset_bottom = 218.0
color = Color(0.55, 0.45, 0.3, 1)

[node name="CardInner" type="ColorRect" parent="FrontFace"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 155.0
offset_bottom = 215.0
color = Color(0.35, 0.3, 0.22, 1)

[node name="ArtBackground" type="ColorRect" parent="FrontFace"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 150.0
offset_bottom = 110.0
color = Color(0.4, 0.45, 0.5, 1)

[node name="ArtContainer" type="Control" parent="FrontFace"]
clip_contents = true
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 150.0
offset_bottom = 110.0

[node name="ArtTexture" type="TextureRect" parent="FrontFace/ArtContainer"]
layout_mode = 0
offset_right = 140.0
offset_bottom = 100.0
expand_mode = 1
stretch_mode = 6

[node name="NameBanner" type="ColorRect" parent="FrontFace"]
layout_mode = 0
offset_left = 12.0
offset_top = 114.0
offset_right = 148.0
offset_bottom = 138.0
color = Color(0.3, 0.25, 0.18, 1)

[node name="NameLabel" type="Label" parent="FrontFace/NameBanner"]
layout_mode = 0
offset_right = 136.0
offset_bottom = 24.0
theme_override_colors/font_color = Color(1, 0.95, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "DRONE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionBox" type="ColorRect" parent="FrontFace"]
layout_mode = 0
offset_left = 12.0
offset_top = 142.0
offset_right = 148.0
offset_bottom = 182.0
color = Color(0.9, 0.85, 0.75, 1)

[node name="DescriptionLabel" type="RichTextLabel" parent="FrontFace/DescriptionBox"]
layout_mode = 0
offset_left = 6.0
offset_top = 4.0
offset_right = 130.0
offset_bottom = 36.0
theme_override_colors/default_color = Color(0.15, 0.12, 0.1, 1)
theme_override_font_sizes/normal_font_size = 9
bbcode_enabled = true
text = "Deals 2 dmg when destroyed."
scroll_active = false

[node name="CostCircle" type="ColorRect" parent="FrontFace"]
layout_mode = 0
offset_left = 130.0
offset_top = 2.0
offset_right = 158.0
offset_bottom = 30.0
color = Color(0.2, 0.4, 0.8, 1)

[node name="CostLabel" type="Label" parent="FrontFace/CostCircle"]
layout_mode = 0
offset_right = 28.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 15
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttackCircle" type="ColorRect" parent="FrontFace"]
layout_mode = 0
offset_left = 5.0
offset_top = 190.0
offset_right = 35.0
offset_bottom = 215.0
color = Color(0.85, 0.65, 0.2, 1)

[node name="AttackLabel" type="Label" parent="FrontFace/AttackCircle"]
layout_mode = 0
offset_right = 30.0
offset_bottom = 25.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 14
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthCircle" type="ColorRect" parent="FrontFace"]
layout_mode = 0
offset_left = 125.0
offset_top = 190.0
offset_right = 155.0
offset_bottom = 215.0
color = Color(0.8, 0.2, 0.2, 1)

[node name="HealthLabel" type="Label" parent="FrontFace/HealthCircle"]
layout_mode = 0
offset_right = 30.0
offset_bottom = 25.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 14
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DupeBadge" type="ColorRect" parent="FrontFace"]
visible = false
layout_mode = 0
offset_left = 65.0
offset_top = 210.0
offset_right = 95.0
offset_bottom = 230.0
color = Color(0.1, 0.4, 0.1, 1)

[node name="DupeLabel" type="Label" parent="FrontFace/DupeBadge"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "x 2"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 12

[node name="TokenFace" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="ArtContainer" type="Panel" parent="TokenFace"]
clip_children = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -80.0
offset_right = 60.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mask")

[node name="ArtTexture" type="TextureRect" parent="TokenFace/ArtContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 6

[node name="OvalBorder" type="Panel" parent="TokenFace"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -80.0
offset_right = 60.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_border")

[node name="AttackCircle" type="ColorRect" parent="TokenFace"]
layout_mode = 0
offset_left = 5.0
offset_top = 175.0
offset_right = 45.0
offset_bottom = 215.0
color = Color(0.85, 0.65, 0.2, 1)

[node name="AttackLabel" type="Label" parent="TokenFace/AttackCircle"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthCircle" type="ColorRect" parent="TokenFace"]
layout_mode = 0
offset_left = 115.0
offset_top = 175.0
offset_right = 155.0
offset_bottom = 215.0
color = Color(0.8, 0.2, 0.2, 1)

[node name="HealthLabel" type="Label" parent="TokenFace/HealthCircle"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackFace" type="Control" parent="."]
layout_mode = 0
offset_right = 160.0
offset_bottom = 220.0
mouse_filter = 1

[node name="TextureRect" type="TextureRect" parent="BackFace"]
layout_mode = 0
offset_right = 160.0
offset_bottom = 220.0
expand_mode = 1
stretch_mode = 5
